[package]
name = "fanout-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
config = { version = "0.14" }
dotenvy = "0.15"
futures = "0.3"
jsonwebtoken = "9"
once_cell = "1.19"
opentelemetry = { version = "0.24", features = ["trace"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic", "reqwest-client"] }
opentelemetry-prometheus = "0.16"
prometheus = { version = "0.13", default-features = false, features = ["process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tonic = { version = "0.12", features = ["tls", "gzip"] }
tonic-health = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.26"

rdkafka = { version = "0.36", features = ["cmake-build"] }
redis = { version = "0.25", features = ["tokio-comp"] }
deadpool-redis = "0.16"
deadpool-postgres = { version = "0.14", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
bb8 = "0.8"
bb8-redis = "0.14"

uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde-well-known"] }

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }
prost-build = "0.13"
prost-types = "0.13"

