[workspace]
members = [
    "services/auth-service",
    "services/user-service", 
    "services/post-service",
    "services/timeline-service",
    "services/notification-service",
    "services/media-service",
    "services/moderation-service",
    "services/dm-service",
    "gateway",
    "shared"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"
surrealdb = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
