[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime and gRPC
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"

# Database
surrealdb = "1.0"
redis = { version = "0.24", features = ["tokio-comp"] }

# Serialization and validation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18", features = ["derive"] }

# Security and cryptography
argon2 = "0.5"
jsonwebtoken = "9.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
base64 = "0.21"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.21"
opentelemetry = { version = "0.21", features = ["rt-tokio"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Rate limiting and security
governor = "0.6"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Email functionality
lettre = "0.11"

# Shared library
nia-shared = { path = "../../shared" }

[build-dependencies]
tonic-build = "0.10"
